# Workshop

./: .replit  README.md  api_endpoints.py  app.py  auth.py  data_handler.py  database.py  file_handler.py  pyproject.toml  replit.md  utils.py  visualization.py  workshop_manager.py
attached_assets/: Pasted-You-re-describing-a-multi-role-web-platform-that-acts-as-a-third-party-between-enterprises-or-1750756625042_1750756625042.txt  Pasted-You-said-workshop-booking-1-zip-Zip-Archive-how-to-run-it-ChatGPT-said-To-help-you-run-the-upl-1750756581979_1750756581980.txt
attached_assets/app/: globals.css  layout.tsx  page.tsx
attached_assets/app/admin/: page.tsx
attached_assets/app/api/admin/registrations/: route.ts
attached_assets/app/api/admin/stats/: route.ts
attached_assets/app/api/auth/login/: route.ts
attached_assets/app/api/auth/logout/: route.ts
attached_assets/app/api/auth/register/: route.ts
attached_assets/app/api/payments/verify/: route.ts
attached_assets/app/api/registrations/: route.ts
attached_assets/app/api/upload/: route.ts
attached_assets/app/api/workshops/: route.ts
attached_assets/app/auth/: page.tsx
attached_assets/app/dashboard/: page.tsx
attached_assets/app/test-payments/: page.tsx
attached_assets/app/workshops/: page.tsx
attached_assets/app/workshops/[id]/: page.tsx
attached_assets/components/: admin-payment-verification.tsx  navbar.tsx  payment-verification-test.tsx  workshop-form-dialog.tsx
attached_assets/contexts/: auth-context.tsx
attached_assets/lib/: api.ts
attached_assets/scripts/: test-payment-scenarios.js
(+8 files in other folders)
